crates/artemis_app/src/snapshots/artemis_app__operation__tests__follow_up_no_question.snap
---
source: crates/artemis_app/src/operation.rs
expression: to_value(actual)
---
<interrupted>No feedback provided</interrupted>
